src/main/java/com/example/coupon/domain/errors/AlreadyExistsTopic.java
package com.example.coupon.domain.errors;

public class AlreadyExistsTopic extends RuntimeException{
}
